--- a/package.json
+++ b/package.json
@@ -6,13 +6,30 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "cloudinary-react": "^1.7.0",
+    "django-react-csrftoken": "^1.0.4",
+    "flatpickr": "^4.6.9",
+    "mdbreact": "^5.0.2",
+    "rc-table": "^7.16.2",
     "react": "^17.0.2",
+    "react-bootstrap-sweetalert": "^5.2.0",
+    "react-css-theme-switcher": "^0.3.0",
+    "react-date-picker": "^8.1.1",
+    "react-datetime-picker": "^3.3.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.7.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-semantic-ui-datepickers": "^2.13.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
+    "sweetalert": "^2.1.2",
+    "sweetalert-react": "^0.4.11",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --host 0.0.0.0",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
